# korg

./: Cargo.toml
.github/workflows/: release-grok-anthropic-serve.yml
crates/codegen/xai-grok-anthropic-bridge/: Cargo.toml  README.md
crates/codegen/xai-grok-anthropic-bridge/src/: credentials.rs  epoch.rs  launcher.rs  lib.rs  live_auth.rs  port_file.rs  reasoning_signature.rs  run.rs  serve_config.rs  server.rs  sse.rs  traffic.rs  tui.rs
crates/codegen/xai-grok-anthropic-bridge/src/translate/: mod.rs  request.rs  stream.rs
crates/codegen/xai-grok-shell/src/auth/: live_session.rs  manager.rs  mod.rs
scripts/: install-grok-anthropic-serve.sh
